client/src/styles/ProjectColumn.css
.project-footer {
  margin-top: 2rem;
  border-top: solid #384857 0.2rem;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

.inav {
  padding: 0.5rem;
  width: 33.3%;
  text-align: center;
  float: left;
  font-size: 1.5rem;
  cursor: pointer;
}
.inav:hover {
  color: white;
  background-color: rgba(161, 166, 172, 0.336);
  border-radius: 0.5rem;
}

#github:hover {
  color: #a96ae4;
}

#twitter:hover {
  color: rgb(110, 185, 207);
}
#stack:hover {
  color: rgb(233, 173, 62);
}
.project-footer .btn {
  text-align: left;
  font-size: 1.4rem;
  font-weight: 400 !important;

  background-color: transparent !important;
  color: white !important;
  border-bottom: solid #c79c78 0.1rem !important;
}
.project-footer .btn:hover {
  border-color: black !important;
}
.project-footer .btn-group-vertical {
  width: 100% !important;
}

.project-stats {
  padding: 0.5rem;
  padding-left: 0;
}
.project-info {
  border-top: solid #384857 0.2rem;
  font-size: 1rem;
  color: white;
}
.project-info .title {
  margin-left: 1rem;
  font-size: 1.5rem;
  font-weight: 500;
}

.project-info .pnav-item:hover {
  background-color: transparent;
  cursor: text;
}
.project-date {
  font-weight: 500;
  text-align: left;
  margin: 0.2rem;
}

.pnav-item {
  padding: 0.25rem;
  text-align: left;
  border-radius: 0.5rem;
  padding-left: 0.5rem;
  cursor: pointer;
  color: rgb(207, 207, 207);
  font-weight: 500;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
  font-size: 1.25rem;
}
.pnav-i {
  width: 1.75rem !important;
  display: inline-block;
  text-align: center !important;
}
.pnav-item i {
}

.pnav-item:hover {
  color: white;
  background-color: rgba(161, 166, 172, 0.336);
}

.pnav-drop {
  padding: 0.5rem;
  padding-top: 0;
  margin-left: 2rem;
  border-left: 0.1rem rgba(161, 166, 172, 0.336) solid;
  font-size: 1rem;
}
.pnav-drop-item {
  padding: 0.25rem;
  padding-left: 0.5rem;
}

#drop-header {
  font-size: 1.25rem;
  padding-left: 0;
}
.project-main {
  background-color: #405364;
  padding-top: 0rem;
  padding-bottom: 0;
  border-right: solid #384857 0.2rem !important;
  color: rgb(232, 232, 233) !important;
  width: 16rem;
}

.user-port {
  font-size: 1.25rem;
  padding: 0.75rem;
  color: white;
  border-bottom: solid #384857 0.2rem;
}

.user-menu {
  float: right;
  cursor: pointer;
  color: rgb(232, 232, 233);
}
.user-portrait {
}
.user-menu i {
  margin-left: 0.5rem;
}
.user-menu i:hover {
  color: white;
}

.hover .project-cont {
  border-bottom: 0.1rem#c79c78 solid;
  border-radius: 0.5rem;
}
.project-portrait {
  font-size: 8rem;
  text-align: center;
  color: #ffe5b1;
}

.project-portrait i {
  padding: 1rem;
}
.project-todos {
  margin-top: 1rem;
}
#delete-btn {
  color: #db5a42 !important;
}

#completed {
}

#remaining {
  color: #383838;
  border-top: #c79c78 solid 0.1rem;
}

#total-count {
  border-top: solid #a57f60 0.1rem;
  margin-top: 0.5rem;
}

.mini-navbar {
  display: none;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: #405364;
  height: 3.5rem;
  color: rgb(185, 185, 185);
}
.mini-navbar .col {
  text-align: center !important;
}
.mini-navbar .pnav-item {
  height: 3.5rem;
  font-size: 2rem;
  text-align: center;
}
@media screen and (max-width: 1200px) {
  .project-main {
    display: none;
  }
  .mini-navbar {
    display: inline;
  }
}

